Make share container overlay contributor container on mobile and specifically set box sizing to avoid overflor in Firefox

--- a/article-preview-component/styles.css
+++ b/article-preview-component/styles.css
@@ -1,3 +1,10 @@
+/* Box sizing rules */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 /* not supported in IE */
 :root {
   --desaturated-dark-blue: hsl(214, 17%, 51%);
@@ -101,9 +108,11 @@ button {
   border-radius: 0 0 5px 5px;
   color: hsl(210, 46%, 95%);
   display: none;
-  margin-top: 10px;
-  min-width: 20px;
   padding: 10px 20px 15px;
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  z-index: 1;
 }
 
 .share-container a {
@@ -137,7 +146,7 @@ button {
   opacity: 0.7;
  }
 
-/* ====== Media Query for Desktop ====== */
+/* ====== Media Query for larger devices ====== */
 
 @media screen and (min-width: 600px) {
   .card {
@@ -167,6 +176,10 @@ button {
     border-radius: 5px 0 0 5px;
   }
 
+  .hide-socials-button {
+    display: none;
+  }
+
   /* ====== Styling for modal with social media icons ====== */
   /* Modal container */
   .share-container {
@@ -183,6 +196,7 @@ button {
     right: -75px;
     z-index: 1;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    width: unset;
   }
 
   /* styling for adding upside down triangle */
